--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@ max-md:hidden">
         <p> Hey there! I’m Eric Manike Haare, a curious mind with a big heart for tech and an even bigger dream for Africa’s future. I’m currently studying<span class="text-[chocolate]"> Information Technology at KNUST as a proud Mastercard Foundation Scholar,</span>I believe technology is more than just code—it’s a powerful tool to educate, connect, and transform lives. I’m passionate about building digital solutions that solve real problems. At the core of everything I do is a desire to lead, serve, and inspire.
         Let’s build something realistic together 🤝.
         </p>
-          <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px]  " id="myResume">My Resume</button>
+          <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer " id="myResume">My Resume</button>
     </div>
      <div class="  md:self-end  md:ml-10 lg:ml-35 ">
         <img src="images/IMG_0321_1_-removebg-preview.png" class="transition-transform duration-1000 hover:scale-95  border-2 rounded-2xl hover:border-amber-600 hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 ">
@@ -156,7 +156,7 @@ I offer <span class="text-[chocolate] ">high-quality graphic design </span> tail
                 <input type="submit"
                 class="bg-amber-300 rounded-2xl text-white w-60 h-15 text-center border-2 cursor-pointer " value="Send Message">
                 </form>
-                <div id="my-form-status" ></div>
+                <div id="my-form-status" class="mt-5 bg-red-600 text-white"></div>
               </div>
     </div>
 
