--- a/public/index.html
+++ b/public/index.html
@@ -156,7 +156,7 @@ I offer <span class="text-[chocolate] ">high-quality graphic design </span> tail
                 <input type="submit"
                 class="bg-amber-300 rounded-2xl text-white w-60 h-15 text-center border-2 cursor-pointer " value="Send Message">
                 </form>
-                <div id="my-form-status" class="mt-5 bg-red-600 text-white w-[600px] h-[200px] rounded-2xl"></div>
+                <div id="my-form-status" class="mt-5 text-red-600 w-[600px] h-[200px] rounded-2xl"></div>
               </div>
     </div>
 
