--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Eric's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="output.css">
+    <link rel="icon" href="images/fa1.jpg" >
     
 </head>
 <body class="relative"> 
@@ -53,7 +54,7 @@ max-md:hidden">
         </p>
           <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer " id="myResume">My Resume</button>
     </div>
-     <div class="  md:self-end  md:ml-10 lg:ml-35 ">
+     <div class=" md:self-end  md:ml-10 lg:ml-35 ">
         <img src="images/IMG_0321_1_-removebg-preview.png" class="transition-transform duration-1000 hover:scale-95  border-2 rounded-2xl hover:border-amber-600 hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 ">
      </div>
 </div>
@@ -88,10 +89,10 @@ max-md:hidden">
  </div>
  <div class="flex flex-row gap-3 justify-center md:flex-col md:items-center md:ml-30">
    
-    <img src="images/html.png" width="80px" height="50px">
-   <img src="images/js.jpeg" width="80px" height="50px">
-    <img src="images/tailwind.png" width="80px" height="50px">
-      <img src="images/pshop.png" width="80px" height="50px">
+    <img data-src="images/html.png" width="80px" height="50px">
+   <img data-src="images/js.jpeg" width="80px" height="50px">
+    <img data-src="images/tailwind.png" width="80px" height="50px">
+      <img data-src="images/pshop.png" width="80px" height="50px">
  </div>
 
     </div>
