--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,21 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="output.css">
     <link rel="icon" href="images/fa1.jpg" >
-    
 </head>
 <body class="relative"> 
+  
+  
+
     
  <div id="top1" class="fixed right-0 bottom-[10vh] cursor-pointer"> <img src="images/top.png"></div>
  
 
 <div  class="h-max layout md:text-3xl bg-indigo-950">
- 
+
+  
+  <div class="loader-container z-100 flex justify-center items-center"  id="load">  <img src="images/load1.png"  class=" loader " width="100px" height="100px"></div>
+
+
 
 <div class="header flex flex-row justify-between flex-nowrap ">
 
@@ -55,7 +61,7 @@ max-md:hidden">
           <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer " id="myResume">My Resume</button>
     </div>
      <div class=" md:self-end  md:ml-10 lg:ml-35 ">
-        <img src="images/IMG_0321_1_-removebg-preview.png" class="transition-transform duration-1000 hover:scale-95  border-2 rounded-2xl hover:border-amber-600 hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 ">
+        <img src="images/d1.jpg" class="transition-transform duration-1000 hover:scale-97  border-2 rounded-2xl hover:border-amber-600 bg-transparent hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 ">
      </div>
 </div>
 
