--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@ md:gap-7
 max-md:hidden">
   
     <a  href="#aboutme" class="p-2 hover:bg-[#FFFDD0] rounded-2xl">About Me</a>
-    <a href="#techxpo" class="my-7 p-2 hover:bg-[#FFFDD0] rounded-2xl">Technical Experience</a>
+    <a href="#techxpo" class="my-7 p-2 hover:bg-[#FFFDD0] rounded-2xl">Technical Expertise</a>
     <a href="#services" class="p-2 hover:bg-[#FFFDD0] rounded-2xl">Services</a>
 
 </nav>
