--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     
  <div id="top1" class="fixed right-0 bottom-[10vh] cursor-pointer"> <img src="images/top.png"></div>
  
-
+<!--layout-->
 <div  class="h-max layout md:text-3xl bg-indigo-950">
 
-  
+  <!--loader-->
   <div class="loader-container z-100 flex justify-center items-center"  id="load">  <img src="images/load1.png"  class=" loader " width="100px" height="100px"></div>
 
 
-
+<!--header-->
 <div class="header flex flex-row justify-between flex-nowrap ">
 
        
@@ -49,6 +49,8 @@ max-md:hidden">
 
 </div>
 
+<!-- aboutme section-->
+
 <div id="aboutme" class="about mt-10 p-6">
 <h3 class="aboutmeunderline font-bold mb-2 flex justify-center items-center">
     About Me
@@ -67,6 +69,7 @@ max-md:hidden">
 
 
 </div>
+<!--xpererience-->
 <div class="tectxpo mt-3" id="techxpo" > 
     <div class="flex justify-center items-center"> <img src="images/technical-support.png" width="50px" height="50px"> </div>
     <div class="techxpounderline flex justify-center font-bold mb-5">Technical Experience</div>
@@ -103,6 +106,8 @@ max-md:hidden">
 
     </div>
 </div>
+
+<!--services section-->
 
 <div class="service" id="services">
  <div class="serviceunderline m-5 text-3xl font-bold flex justify-center">Services </div>
