--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
 <body class="relative"> 
   
   
-
     
  <div id="top1" class="fixed right-0 bottom-[10vh] cursor-pointer"> <img src="images/top.png"></div>
  
 <!--layout-->
 <div  class="h-max layout md:text-3xl bg-indigo-950">
 
+
   <!--loader-->
-  <div class="loader-container z-100 flex justify-center items-center"  id="load">  <img src="images/load1.png"  class="loader" width="100px" height="100px"></div>
+  <div class="loader-container  fixed inset-0 flex justify-center items-center  bg-[#000435]/90 z-[1000]"   id="load">  <img src="images/load1.png"  class="loader" width="100px" height="100px"></div>
 
 
 <!--header-->
@@ -167,7 +167,7 @@ I offer <span class="text-[chocolate] ">high-quality graphic design </span> tail
                 <input type="submit"
                 class="bg-amber-300 rounded-2xl text-white w-60 h-15 text-center border-2 cursor-pointer " value="Send Message">
                 </form>
-                <div id="my-form-status" class="mt-5 text-red-600"></div>
+                <div id="my-form-status" class="mt-5 text-shadow-amber-50 text-2xl z-10"></div>
               </div>
     </div>
 
