--- a/public/index.html
+++ b/public/index.html
@@ -59,10 +59,11 @@ max-md:hidden">
         <p> Hey there! I’m Eric Manike Haare, a curious mind with a big heart for tech and an even bigger dream for Africa’s future. I’m currently studying<span class="text-[chocolate]"> Information Technology at KNUST as a proud Mastercard Foundation Scholar,</span>I believe technology is more than just code—it’s a powerful tool to educate, connect, and transform lives. I’m passionate about building digital solutions that solve real problems. At the core of everything I do is a desire to lead, serve, and inspire.
         Let’s build something realistic together 🤝.
         </p>
-          <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer " id="myResume">My Resume</button>
+        <button class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer " id="myResume">My Resume</button>
+       
     </div>
      <div class=" md:self-end  md:ml-10 lg:ml-35 ">
-        <img src="images/d1.jpg" class="transition-transform duration-1000 hover:scale-97  border-2 rounded-2xl hover:border-amber-600 bg-transparent hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 ">
+        <img  src="images/d1.jpg" class="transition-transform duration-1000 hover:scale-97  border-2 rounded-2xl hover:border-amber-600 bg-transparent hover:bg-linear-to-r from-amber-50 via-[green] to to-blue-600 " id="Fullpic">
      </div>
 </div>
 
