--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@ md:h-fit
 md:gap-7
 max-md:hidden">
   
-    <a  href="#aboutme" class="p-2 hover:bg-[#FFFDD0] rounded-2xl">About Me</a>
-    <a href="#techxpo" class="my-7 p-2 hover:bg-[#FFFDD0] rounded-2xl">Technical Expertise</a>
-    <a href="#services" class="p-2 hover:bg-[#FFFDD0] rounded-2xl">Services</a>
+    <a  href="#aboutme" class="p-2  rounded-2xl">About Me</a>
+    <a href="#techxpo" class="my-7 p-2  rounded-2xl">Technical Expertise</a>
+    <a href="#services" class="p-2  rounded-2xl">Services</a>
 
 </nav>
 
@@ -51,7 +51,7 @@ max-md:hidden">
 <!-- aboutme section-->
 
 <div id="aboutme" class="about mt-10 p-6">
-<h3 class="aboutmeunderline font-bold mb-2 flex justify-center items-center">
+<h3 class="aboutmeunderline font-bold mb-5 text-2xl flex justify-center items-center">
     About Me
 </h3>
 <div class="aboutMeContent grid grid-cols-1 md:grid-cols-2 p-5 rounded-2xl">
@@ -72,7 +72,7 @@ max-md:hidden">
 <!--xpererience-->
 <div class="tectxpo mt-3" id="techxpo" > 
     <div class="flex justify-center items-center"> <img src="images/technical-support.png" width="50px" height="50px"> </div>
-    <div class="techxpounderline flex justify-center font-bold mb-5">Technical Experience</div>
+    <div class="techxpounderline flex justify-center text-2xl font-bold m-5">Technical Expertise</div>
      
 
     <div class="grid grid-cols-1 md:grid-cols-2">
@@ -93,8 +93,8 @@ max-md:hidden">
         <li> Deployed websites using platforms such as Netlify, Vercel, and GitHub Pages.</li>
     </ul>
     <div class="my-5 flex flex-col items-center">
-     <h3> My Recent Projects</h3> 
-      <button  class="text-amber-50 text-2xl p-2 my-5 md:my-20  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer" >here &#x219D;</button></div>
+     <span class="font-bold"> My Recent Projects</span> 
+      <button  class="text-amber-50 text-2xl p-2 my-5 md:my-0  transition-colors duration-300 bg-indigo-500 w-[50%] self-center hover:bg-indigo-600 rounded-[10px] cursor-pointer" >here &#x219D;</button></div>
  </div>
  <div class="flex flex-row gap-3 justify-center md:flex-col md:items-center md:ml-30">
    
@@ -110,7 +110,7 @@ max-md:hidden">
 <!--services section-->
 
 <div class="service" id="services">
- <div class="serviceunderline m-5 text-3xl font-bold flex justify-center">Services </div>
+ <div class="serviceunderline m-5 text-2xl font-bold flex justify-center">Areas Of Focus </div>
 
 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 p-5">
    
